// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpgradeButton should display with custom callback 1`] = `
<div
  class="button-class"
>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <button
      class="wrapper primary medium"
    >
      <span
        class="wrapper"
      >
        a label
        <i
          class="material-icons icon isRight medium"
        >
          auto_awesome
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`UpgradeButton should display with custom props 1`] = `
<div
  class="button-class"
>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <a
      to="[object Object]"
    >
      <button
        class="wrapper primary medium"
      >
        <span
          class="wrapper"
        >
          a label
          <i
            class="material-icons icon isRight medium"
          >
            auto_awesome
          </i>
        </span>
      </button>
    </a>
  </div>
</div>
`;

exports[`UpgradeButton should display with default props 1`] = `
<div>
  <div
    class="d-flex align-items-center upgradeLink"
  >
    <a
      to="[object Object]"
    >
      <button
        class="wrapper primary medium"
      >
        <span
          class="wrapper"
        >
          Upgrade
          <i
            class="material-icons icon isRight medium"
          >
            auto_awesome
          </i>
        </span>
      </button>
    </a>
  </div>
</div>
`;
